UI: Add worker selection

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -45,6 +45,12 @@
                             <option>(Session ID)</option>
                         </select>
                     </div>
+                    <div id="workerSelectDiv" style="display:none; float:right;">
+                        Worker:
+                        <select id="workerSelect" onchange='selectNewWorker()'>
+                            <option>(Worker ID)</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
