--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -131,13 +131,18 @@
                                 <h2><b>@i18n.getMessage("train.overview.chart.updateRatioTitle"): log<sub>10</sub></b></h2>
                                 @*<h2><b>@i18n.getMessage("train.overview.chart.updateRatioTitle")</b></h2><h2 id="updateRatioTitleLog10"><b>: log<sub>10</sub></b></h2>*@
                                 @*<h2><b>@i18n.getMessage("train.overview.chart.updateRatioTitle")</b></h2><p id="updateRatioTitleLog10"><b>: log<sub>10</sub></b></p>*@
-                                <div style="float: right">
-                                    <p class="stackControls center">
-                                        <input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.ratio")" onclick="setSelectMeanMagChart('ratios')">
-                                        <input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.param")" onclick="setSelectMeanMagChart('paramMM')">
-                                        <input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.update")" onclick="setSelectMeanMagChart('updateMM')">
-                                    </p>
-                                </div>
+                                @*<div style="float: right">*@
+                                    @*<p class="stackControls center">*@
+                                        @*<input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.ratio")" onclick="setSelectMeanMagChart('ratios')">*@
+                                        @*<input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.param")" onclick="setSelectMeanMagChart('paramMM')">*@
+                                        @*<input class="btn btn-small" type="button" value="@i18n.getMessage("train.model.meanmag.btn.update")" onclick="setSelectMeanMagChart('updateMM')">*@
+                                    @*</p>*@
+                                @*</div>*@
+                                <ul class="nav tab-menu nav-tabs" style="position:relative; top: -11px; right: -12px;">
+                                    <li id="mmRatioTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('ratios')">@i18n.getMessage("train.model.meanmag.btn.ratio")</a></li>
+                                    <li id="mmParamTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('paramMM')">@i18n.getMessage("train.model.meanmag.btn.param")</a></li>
+                                    <li id="mmUpdateTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('updateMM')">@i18n.getMessage("train.model.meanmag.btn.update")</a></li>
+                                </ul>
                             </div>
                             <div class="box-content">
                                 <div id="meanmag" class="center" style="height: 300px;" ></div>
