UI - track last update time and update only if new information is available

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -283,14 +283,14 @@
         <script>
                 $(document).ready(function () {
                     renderModelGraph();
-                    renderModelPage();
+                    renderModelPage(true);
                 });
         </script>
 
             <!-- Execute periodically (every 2 sec) -->
         <script>
                 setInterval(function () {
-                    renderModelPage();
+                    renderModelPage(false);
                 }, 2000);
         </script>
     </body>
