--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -245,14 +245,14 @@
         <!-- Execute once on page load -->
         <script>
                 $(document).ready(function () {
-                    renderOverviewPage();
+                    renderOverviewPage(true);
                 });
         </script>
 
             <!-- Execute periodically (every 2 sec) -->
         <script>
                 setInterval(function () {
-                    renderOverviewPage();
+                    renderOverviewPage(false);
                 }, 2000);
         </script>
             <!-- End JavaScript-->
