Enforce min-height equal to viewport (Stylesheet)
Former-commit-id: 3fd174530098ba9c662820d5e39fdd12c370fa80

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
@@ -695,7 +695,7 @@ ul.messages li .message {
 #content {
 	background: #ffffff;
 	filter: none;
-	min-height: 100%;
+	min-height: 100vh;
 	padding: 20px 20px;
 	position: relative;
 }
