Fix tabs on smaller screen (Overview, Model Pages), Allow system dropdown to scale infinitely (System Page)

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/resources/deeplearning4jUiAssets/css/style.css
@@ -521,6 +521,8 @@ a.brand span {
   	float: left;
   	min-width: 160px;
 	max-width: 300px;
+	height: 50vh;
+	overflow: auto;
   	padding: 0px 0;
   	margin: 5px 0 0 0;
   	list-style: none;
