--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -290,6 +290,9 @@
                     renderSystemPage(true);
                     renderTabs();
                     selectMachine();
+                    /* Default GPU to hidden */
+                    $("#gpuTable").hide();
+                    $("#gpuMemoryChart").hide();
                 });
         </script>
 
