--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -129,7 +129,7 @@
                         <div class="box">
                             <div class="box-header">
                                 <h2><b>@i18n.getMessage("train.overview.chart.updateRatioTitle")</b></h2><p id="updateRatioTitleLog10"><b>: log<sub>10</sub></b></p>
-                                <ul class="nav tab-menu nav-tabs" style="position:relative; top: -11px; right: -12px;">
+                                <ul class="nav tab-menu nav-tabs" style="position:absolute; margin-top: -36px; right: 27px;">
                                     <li id="mmRatioTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('ratios')">@i18n.getMessage("train.model.meanmag.btn.ratio")</a></li>
                                     <li id="mmParamTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('paramMM')">@i18n.getMessage("train.model.meanmag.btn.param")</a></li>
                                     <li id="mmUpdateTab"><a href="javascript:void(0);" onclick="setSelectMeanMagChart('updateMM')">@i18n.getMessage("train.model.meanmag.btn.update")</a></li>
