Disable user guide page for now

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -66,7 +66,7 @@
                             <li class="active"><a href="javascript:void(0);"><i class="icon-bar-chart"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.overview")</span></a></li>
                             <li><a href="model"><i class="icon-tasks"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.model")</span></a></li>
                             <li><a href="system"><i class="icon-dashboard"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.system")</span></a></li>
-                            <li><a href="help"><i class="icon-star"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.userguide")</span></a></li>
+                            @*<li><a href="help"><i class="icon-star"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.userguide")</span></a></li>*@
                             <li>
                                 <a class="dropmenu" href="javascript:void(0);"><i class="icon-folder-close-alt"></i><span class="hidden-tablet">@i18n.getMessage("train.nav.language")</span></a>
                                 <ul>
