Fix Play! template.
Former-commit-id: 656b2cc7247f7e598547cdb52e9c7e249dd01e12 [formerly aeaa028150e3d70998c1f4b4cfc234fc21165bc5]
Former-commit-id: cd32b495d4e3147a5bb07135d615841ac6460431

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -223,6 +223,7 @@
         <script src="/assets/js/jquery.flot.pie.js"></script>
         <script src="/assets/js/jquery.flot.stack.js"></script>
         <script src="/assets/js/jquery.flot.resize.min.js"></script>
+        <script src="/assets/js/jquery.flot.selection.js"></script>
         <script src="/assets/js/jquery.chosen.min.js"></script>
         <script src="/assets/js/jquery.uniform.min.js"></script>
         <script src="/assets/js/jquery.cleditor.min.js"></script>
